refactor(links.component): Update 'links' component.

--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -1,3 +1,10 @@
-<p>
-  links works!
-</p>
+<!--  mock data - draft version  -->
+<h3>group id: 1486423878140</h3>
+<span>[06/feb/2017, 17:33:05]</span>
+<ul>
+  <li><a href="#">Restore all</a></li>
+  <li><a href="#">Delete all</a></li>
+  <li><a href="#">More</a></li>
+</ul>
+
+<khaxa-link-list></khaxa-link-list>
